SVN
-------------------------------

All:   Resolved issue CASTOR-1644 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Refactored creation of ClassDescriptors through MappingLoader.
       Details: http://jira.codehaus.org/browse/CASTOR-1644
       (Ralf - 20070127)

Gen:   Resolved issue CASTOR-1854 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with not closed file handles for '.castor.cdr' during code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1854
       (Werner - 20070122)

XML:   Resolved issue CASTOR-1851 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add to CTF the ability to control whether or not code is generated from imported schema
       Details: http://jira.codehaus.org/browse/CASTOR-1851
       (Edward - 20070118)

Gen:   Resolved issue CASTOR-1843 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Re-generated classes for binding files, in preparation for adding support for
       new <componentBinding>
       Details: http://jira.codehaus.org/browse/CASTOR-1843
       (Werner - 20070118)

XML:   Resolved issue CASTOR-1847 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Minor improvement in validation classes
       Details: http://jira.codehaus.org/browse/CASTOR-1847
       (Edward - 20070117)

Gen:   Resolved issue CASTOR-1839 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with derivation of Java types for UNIONs that are part of restriction
       hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1839
       (Werner - 20070117)

Doc:   Resolved issue CASTOR-1841 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed documentation for 'defaultBindingType' attribute in XMl code generation documentation.
       Details: http://jira.codehaus.org/browse/CASTOR-1841
       (Werner - 20070117)
